<resources>
    <string name="app_name">AnimalApp</string>
    <string name="hello_blank_fragment">Fragment vuoto</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="conferma">Conferma</string>
    <string name="cancella">Cancella</string>
    <string name="modifica">Modifica</string>
    <string name="chiudi">Chiudi</string>
    <string name="seleziona">Seleziona</string>
    <string name="error_generic">Errore generico, contattare gli sviluppatori</string>
    <string name="error_offline">Sezione non disponibile in modalità offline</string>
    <string name="error_date">La data selezionata si trova nel futuro</string>
    <string name="alcuni_campi_vuoti">Campi vuoti!</string>
    <string name="salvando_immagine">Salvando l\'immagine…</string>
    <string name="salvata_immagine">Immagine caricata con successo!</string>
    <string name="chilometri">" Chilometri"</string>
    <string name="offline_dialog_title">Accesso offline</string>
    <string name="offline_dialog">Entrerai nell\'app in modalità offline. Potrai accedere a un numero limitato di funzionalità. Quando la connessione ad internet sarà ristabilità, ti sarà proposto di passare alla modalità online rieffettuando il login.</string>
    <string name="no_more_offline_dialog">Ho capito, non mostrare più questo avviso</string>
    <string name="online_dialog_title">Tornare online?</string>
    <string name="online_dialog">La connessione ad internet sembra essere tornata, vuoi tornare online effettuando nuovamente il login?</string>
    <string name="online_choice_no">No, rimango offline</string>
    <string name="online_choice_yes">Si, portami online!</string>
    <string name="offline_warning">Connessione persa: passaggio a modalità offline</string>
    <string name="online_login_message">Login online effettuato!</string>
    <string name="online_login_unstable">Credenziali non corrette o rete troppo instabile</string>
    <string name="missing_mail_app">Impossibile procedere, non è installata un\'app di gestione mail</string>
    <string name="camera_permission">Operazione non completata.
        In caso di schermata nera, verificare i permessi dell\'applicazione.</string>
    <string name="location_permission">Per accedere a questa funzione, è necessario abilitare l\'accesso alla posizione</string>
    <string name="location_permission_spiegazione">Il permesso <b>POSIZIONE</b> è essenziale per poter gestire tutte le informazioni relative alle segnalazione. Senza di esso non ti sarà possibile inserire una nuove segnalazioni e filtrare le segnalazioni esistenti</string>
    <string name="title_location_permission_spiegazione">Perché accettare il permesso</string>
    <string name="chiedi_permesso">"Chiedi permesso</string>
    <string name="dettagli_profilo">Dettagli profilo utente</string>
    <string name="abilita_posizione">Abilita posizione</string>
    <string name="animalapp_login">AnimalApp - Login</string>
    <string name="inserisci_credenziali">Inserisci le tue credenziali per accedere</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="login">Login</string>
    <string name="registrati">Registrati</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="role_message">Prima di tutto, a che categoria appartieni?</string>
    <string name="padrone">Padrone</string>
    <string name="appassionato">Appassionato</string>
    <string name="veterinario">Veterinario</string>
    <string name="organizzazione">Organizzazione</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="codice_fiscale">Codice Fiscale</string>
    <string name="nome_clinica">Nome clinica</string>
    <string name="scelta_ruolo">Scelta ruolo</string>
    <string name="username">Username</string>
    <string name="nome_e_cognome">Nome completo</string>
    <string name="telefono">Telefono</string>
    <string name="nome_ente">Nome ente</string>
    <string name="scopo_ente">Scopo ente</string>
    <string name="descrizione_ente">Descrizione ente</string>
    <string name="title_activity_passionate_navigation">Navigazione Appassionato</string>
    <string name="title_fragment_passionate_profile">Home</string>
    <string name="title_fragment_passionate_reservation">Prenotazioni</string>
    <string name="title_fragment_passionate_purchases">Spese</string>
    <string name="title_fragment_reports">Lista segnalazioni</string>
    <string name="registra_animale">Registra animale</string>
    <string name="animali_proprieta">Animali di proprietà</string>
    <string name="no_animal">Non hai associato alcun animale</string>
    <string name="passionate_profile_cardlayout_reports_text">Visualizza le segnalazioni</string>
    <string name="passionate_profile_cardlayout_pokelinks_text">Visualizza modalità Pokelinks</string>
    <string name="passionate_profile_cardlayout_org_list_text">Visualizza organizzazioni</string>
    <string name="passionate_profile_cardlayout_vet_list_text">Visualizza veterinari</string>
    <string name="passionate_profile_cardlayout_QR_Scan">Scannerizza QR</string>
    <string name="aggiungi_animale">Aggiungi animale</string>
    <string name="nome_animale">Nome animale</string>
    <string name="specie_animale">Specie animale</string>
    <string name="razza">Razza animale</string>
    <string name="animal_profile_help">Clicca sul nome dell\'animale per andare al suo AnimalProfile</string>
    <string name="codice_microchip">Codice microchip</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="impostazione_foto_animal_card">"Attendi, impostazione della foto in corso…"</string>
    <string name="photo_diary">Photo diary</string>
    <string name="condividi_card">Condividi card</string>
    <string name="descrizione_immagine">Descrizione immagine</string>
    <string name="seleziona_immagine">Seleziona immagine</string>
    <string name="salva">Salva</string>
    <string name="titolo_immagine">Titolo immagine</string>
    <string name="aggiornamento_completo">Aggiornamento completato con successo</string>
    <string name="spostando_post_scambio">Spostando i post…</string>
    <string name="registrazione_animale">Registrazione animale</string>
    <string name="a_casa_o_in_stallo">"Rosso: in stallo\nVerde: a casa"</string>
    <string name="title_fragment_diagnosis">Elenco diagnosi</string>
    <string name="title_fragment_exams">Elenco esami</string>
    <string name="scannerizza_qr_code">Scannerizza il QR code</string>
    <string name="aggiungi_appuntamento">Aggiungi appuntamento</string>
    <string name="appuntamenti_recenti">Appuntamenti recenti</string>
    <string name="tutti_appuntamenti_recenti">Visualizza tutti gli appuntamenti recenti</string>
    <string name="appuntamenti_passati">Stai visualizzando: appuntamenti passati</string>
    <string name="appuntamenti_futuri">Stai visualizzando: appuntamenti futuri</string>
    <string name="dettagli_animale">Animale:</string>
    <string name="dettagli_veterinario">Veterinario:</string>
    <string name="dettagli_data">Data e ora:</string>
    <string name="impossibile_prenotare">Impossibile prenotare un appuntamento per una data già superata</string>
    <string name="prenotazione_avvenuta">Prenotazione inserita con successo!</string>
    <string name="prenotazione_aggiornata">Prenotazione aggiornata con successo!</string>
    <string name="title_activity_veterinarian_navigation">VeterinarianNavigationActivity</string>
    <string name="title_fragment_veterinarian_profile">Home Vet</string>
    <string name="title_fragment_veterinarian_animal_list">Lista animali</string>
    <string name="title_fragment_veterinarian_patients">Pazienti</string>
    <string name="title_fragment_veterinarian_reservations">Prenotazioni</string>
    <string name="title_fragment_veterinarian_backbench">Informazioni del tuo stallo</string>
    <string name="data_appuntamento">data</string>
    <string name="ora_appuntamento">ora</string>
    <string name="aggiungi_prenotazione">Aggiungi prenotazione</string>
        <string name="aggiungi_diagnosi">Aggiungi diagnosi</string>
        <string name="mostra_diagnosi">Mostra diagnosi</string>
        <string name="modifica_diagnosi">Modifica diagnosi</string>
        <string name="elimina_diagnosi">Elimina diagnosi</string>
        <string name="inserisci_diagnosi">Inserisci riassunto breve della visita</string>
        <string name="inserisci_doc_diagnosi">Oppure aggiungi un file .doc con una diagnosi approfondita</string>
        <string name="aggiungi_esame">Aggiungi esame</string>
        <string name="esito_esame">Esito esame</string>
        <string name="mostra_esame">Mostra esame</string>
        <string name="modifica_esame">Modifica esame</string>
        <string name="elimina_esame">Elimina esame</string>
        <string name="esito_positivo">Esito positivo</string>
        <string name="esito_negativo">Esito negativo</string>
        <string name="tipo_esame">Tipologia di esame</string>
    <string name="proprietario_animale_vet_list">Proprietario:</string>
    <string name="nome_animale_vet_list">Nome:</string>
    <string name="product">prodotto</string>
    <string name="costo">costo</string>
    <string name="quantit">quantità</string>
    <string name="data_acquisto">data acquisto</string>
    <string name="inserisci_spesa">inserisci spesa</string>
    <string name="categoria">categoria</string>
    <string name="filtri">FILTRI</string>
    <string name="animale">Animale</string>
    <string name="categorie">Categorie</string>
    <string name="costoh">Costo unitario</string>
    <string name="intervallo_date">Intervallo date</string>
    <string name="inserimento_spesa">Inserimento spesa</string>
    <string name="date">Date</string>
    <string name="title_fragment_requests">Richieste &amp; offerte</string>
    <string name="descrizione">Descrizione</string>
    <string name="offerta">Offerta</string>
    <string name="richiesta">Richiesta</string>
    <string name="operation">Tipo</string>
    <string name="oggetto">Oggetto</string>
    <string name="sendMail">Contatta per email</string>
    <string name="richieste_mie">Visualizzazione: personali</string>
    <string name="richieste_altri">Visualizzazione: altri utenti</string>
    <string name="conferma_richiesta_titolo">Sei sicuro?</string>
    <string name="conferma_richiesta_messaggio">Vuoi contrassegnare come "completato" questo elemento?</string>
    <string name="ricarica_sessione">Spostamento completato, riesegui il login</string>
    <string name="completa_richiesta">Completamento richiesta</string>
    <string name="nuova_richiesta_inserita_successo">Richiesta aggiunta correttamente</string>
    <string name="sbagliato_animale_scansionato">L\'animale scansionato non corrisponde alla richiesta! Riprovare inquadrando il codice QR corretto.</string>
    <string name="descrizione_stallo">Descrizione dello stallo</string>
    <string name="descrizione_stallo_inserita_successo">Descrizione stallo inserita correttamente</string>
    <string name="inserisci_descrizione_stallo">Inserisci descrizione stallo</string>
    <string name="inserisci_immagine_stallo">Inserisci immagine stallo</string>
    <string name="aggiungi_nuovo_backbench">Aggiungi animale allo stallo temporaneo</string>
    <string name="nuova_backbench_inserita_successo">Residenza temporanea registrata con successo</string>
    <string name="completa_inserimento">Completa inserimento</string>
    <string name="gestione_stallo">Gestione stallo</string>
    <string name="visualizza_profilo_animale">Visualizza profilo animale</string>
    <string name="antemprima_stallo">Antemprima stallo</string>
    <string name="descrizione_della_richiesta">Descrizione della richiesta</string>
</resources>