<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/veterinarian_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_fragment_veterinarian_profile"/>

    <item
        android:id="@+id/veterinarian_reservation"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/title_fragment_veterinarian_reservations"/>

    <item
        android:id="@+id/veterinarian_requests"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/title_fragment_requests"/>

    <item
        android:id="@+id/veterinarian_backbench"
        android:icon="@drawable/ic_baseline_house_siding_24"
        android:title="@string/gestione_stallo"/>

</menu>