<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:textColor="?attr/colorOnSecondary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtOfflineChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        android:text="@string/offline_dialog"/>

    <CheckBox
        android:id="@+id/checkOfflineChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="@string/no_more_offline_dialog"/>

    <Button
        android:id="@+id/btnOfflineChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="?attr/colorPrimary"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/ok" />

</LinearLayout>