<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:textColor="?attr/colorOnSecondary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtOnlineChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:text="@string/online_dialog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOnlineChoiceNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="13sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/online_choice_no" />

        <Button
            android:id="@+id/btnOnlineChoiceYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="13sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/online_choice_yes" />

    </LinearLayout>


</LinearLayout>