<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/roleLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearTitleRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".activities.registration.RegistrationActivity"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/benvenuto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/role_message"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearTitleRole">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/txtRegUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:drawablePadding="10dp"
                android:text="@string/appassionato"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/phd_circle" />

            <TextView
                android:id="@+id/txtRegVeterinary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:drawablePadding="10dp"
                android:text="@string/veterinario"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/phd_circle" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtRegOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:drawablePadding="10dp"
            android:text="@string/organizzazione"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/phd_circle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>