<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtRequestDetailsTitle"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="20sp"/>


            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/descrizione_della_richiesta"/>

            <TextView
                android:id="@+id/txtRequestDetailsEntityType"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp"
                android:text="@string/operation"
                />

            <TextView
                android:id="@+id/txtRequestDetailsBody"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnSendMail"
                style="?android:attr/buttonBarButtonStyle"
                android:drawableTop="@drawable/ic_baseline_email_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:text="@string/sendMail"/>

            <com.google.android.material.divider.MaterialDivider
                android:visibility="gone"
                android:id="@+id/infoDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/txtRequestDetailsTitle2"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/antemprima_stallo"
                android:textSize="18sp"/>

            <FrameLayout
                android:id="@+id/frameBackbench"
                android:visibility="gone"
                android:fillViewport="true"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnShowAnimalProfile"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_pets_grenn_24"
                android:textStyle="bold"
                android:visibility="gone"
                android:text="@string/visualizza_profilo_animale"/>

            <Button
                android:id="@+id/btnConfirmAnimalRequestQr"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_qr_code_scanner_24_real"
                android:textStyle="bold"
                android:visibility="gone"
                android:text="@string/scannerizza_qr_code"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>